--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,13 +18,11 @@ phases:
       - aws configure set region  eu-west-2
       - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID_PARAM
       - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY_PARAM
-      - mkdir src
-      - cp -R  ..\AWS-Step-Functions-with-Callback-Pattern src
-      - cd src
-      - dotnet clean  StepfunctionAsync.sln
-      - dotnet restore StepfunctionAsync.sln
-      - dotnet clean  AsyncLambda.sln
-      - dotnet restore AsyncLambda.sln
+      - echo $CODEBUILD_SRC_DIR
+      - dir
+      - dotnet clean  AWSServerless1.sln
+      - dotnet restore AWSServerless1.sln
+      
   build:
     commands:
       - echo Build started on `date`
