--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,7 @@ phases:
       - dir
       - dotnet clean  ./AWSServerless1/AWSServerless1.sln
       - dotnet restore ./AWSServerless1/AWSServerless1.sln
+      - cd AWSServerless1
       
   build:
     commands:
