--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,4 +30,5 @@ phases:
       - dotnet new -i Amazon.Lambda.Templates::*
       - dotnet tool install -g Amazon.Lambda.Tools
       - dotnet tool update -g Amazon.Lambda.Tools
+      - cd AWSServerless1
       - dotnet lambda deploy-serverless
