--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -27,15 +27,15 @@
  "version":{
     "Type": "AWS::Lambda::Version",
     "Properties":{
-      "FunctionName": "{!Ref WaitForApprovalTask}",
+      "FunctionName": {"Ref": "WaitForApprovalTask"},
       "Description": "v1"
       }
       },
   "alias":{
     "Type": "AWS::Lambda::Alias",
     "Properties":{
-      "FunctionName": "{!Ref function}",
-      "FunctionVersion":"{ !GetAtt version.Version}",
+      "FunctionName": {"Ref": "WaitForApprovalTask"},
+      "FunctionVersion":{ "Fn::GetAtt": ["version","Version"]},
       "Name": "BLUE"
       }
       },
