--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -45,10 +45,7 @@
       "FunctionVersion":{ "Fn::GetAtt": ["newversion","Version"]},
       "Name": "BLUE",
       "RoutingConfig":{
-        "AdditionalVersionWeights":{
-           "FunctionVersion": {"Fn::GetAtt": ["version","Version"]},
-            "FunctionWeight": "0.5"
-            }
+        "AdditionalVersionWeights":["0.5","0.5"]
       }
       }
       },
