--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -162,7 +162,8 @@
           "Statement": [
             {
               "Action": [
-                "sts:AssumeRole"
+                "sts:AssumeRole",
+                "dynamodb:*"
               ],
               "Effect": "Allow",
               "Principal": {
@@ -191,7 +192,10 @@
                   "Fn::Sub": "states.${AWS::Region}.amazonaws.com"
                 }
               },
-              "Action": "sts:AssumeRole"
+               "Action": [
+                "sts:AssumeRole",
+                "dynamodb:*"
+              ]
             }
           ]
         },
