--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -192,10 +192,7 @@
                   "Fn::Sub": "states.${AWS::Region}.amazonaws.com"
                 }
               },
-               "Action": [
-                "sts:AssumeRole",
-                "dynamodb:*"
-              ]
+              "Action": "sts:AssumeRole"
             }
           ]
         },
