--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -162,8 +162,7 @@
           "Statement": [
             {
               "Action": [
-                "sts:AssumeRole",
-                "dynamodb:*"
+                "sts:AssumeRole"
               ],
               "Effect": "Allow",
               "Principal": {
@@ -175,7 +174,8 @@
           ]
         },
         "ManagedPolicyArns": [
-          "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+          "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
+          "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess"
         ]
       }
     },
