--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -133,7 +133,9 @@
 
      "Order":{
          "Type": "AWS::DynamoDB::Table",
+         
     "Properties": {
+     "TableName" : "Order",
       "AttributeDefinitions":[{ 
          "AttributeName": "OrderID",
           "AttributeType": "S"}, { 
