--- a/AWSServerless1/OrderOrchestration/serverless.template
+++ b/AWSServerless1/OrderOrchestration/serverless.template
@@ -35,13 +35,7 @@
       }
       },
 
-       "newversionv3":{
-    "Type": "AWS::Lambda::Version",
-    "Properties":{
-      "FunctionName": {"Ref": "ValidateOrderTask"},
-      "Description": "v3"
-      }
-      },
+  
 
 
 
@@ -51,13 +45,8 @@
     "Properties":{
       "FunctionName": {"Ref": "ValidateOrderTask"},
       "FunctionVersion":{ "Fn::GetAtt": ["newversionv2","Version"]},
-      "Name": "BLUE",
-      "RoutingConfig":{
-        "AdditionalVersionWeights":[{
-           "FunctionVersion": {"Fn::GetAtt": ["newversionv3","Version"]},
-            "FunctionWeight": "0.1"}]
-            
-      }
+      "Name": "BLUE"
+  
       }
       },
 
